Header is not fixed anymore
When it was fixed, it overlap with other page elements while scrolling.
We agreed that it is not necessary to have it in a fixed position, because
the user can always scroll up (the home page is not long).

--- a/custom_assets/css/global.css
+++ b/custom_assets/css/global.css
@@ -14,7 +14,6 @@
 
 .title-strip {
   background-color: var(--secondary-color-darker);
-  padding-top: var(--header-height);
   height: 175px;
   display: flex;
   align-items: start;
